# MLP

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.c  simple-mnist-nn-from-scratch-numpy-no-tf-keras.ipynb
images/: image.c
matrix/: matrix.c  operations.c
network/: activations.c  activations.h  nn.c  nn.h
